<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="order"
            type="com.example.assessment.data.models.Order" />

    </data>

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:fitsSystemWindows="true">

       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="16dp"
               android:layout_marginTop="16dp"
               android:layout_marginEnd="16dp"
               android:layout_marginBottom="16dp"
               android:orientation="vertical"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               tools:context=".ui.orderdetail.view.fragment.OrderDetailFragment">


               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="50dp"
                   android:orientation="horizontal">

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:text="@string/items_total" />

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:text="@{order.total}"
                       android:textAlignment="viewEnd"/>

               </LinearLayout>

               <androidx.recyclerview.widget.RecyclerView
                   android:id="@+id/item_rv"
                   android:layout_width="match_parent"
                   android:layout_height="200dp" />

               <RadioGroup
                   android:id="@+id/splitMethodGroup"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="8dp"
                   android:orientation="vertical">

                   <RadioButton
                       android:id="@+id/radioEvenly"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/split_evenly" />

                   <RadioButton
                       android:id="@+id/radioByItem"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/split_by_item" />

                   <RadioButton
                       android:id="@+id/radioByAmount"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/split_by_amount" />

                   <RadioButton
                       android:id="@+id/radioByShares"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/split_by_shares" />
               </RadioGroup>


           </LinearLayout>
       </androidx.constraintlayout.widget.ConstraintLayout>
   </ScrollView>
</layout>